맞춤투자가이드 수정

--- a/portal/css/common.css
+++ b/portal/css/common.css
@@ -1707,6 +1707,10 @@
     font-size: 14px;
     font-weight: 400;
 }
+.tbl_longcard > ul > li .tit > a {
+    display: block;
+    width: 100%;
+}
 .tbl_longcard > ul > li .tit strong {
     display: flex;
     gap: 10px;
