--- a/portal/css/common.css
+++ b/portal/css/common.css
@@ -2875,7 +2875,7 @@
     flex-direction: column;
     justify-content: center;
     width: calc(50% - 20px);
-    padding: 25px;
+    padding: 15px;
     box-sizing: border-box;
     border: 1px solid #d9e1e7;
     border-radius: 5px;
@@ -2883,8 +2883,37 @@
 }
 .tbl_card_list.type_04 .tit {
     display: flex;
+    align-items: center;
     font-size: 20px;
     font-weight: 500;
+}
+
+/* 펀드/조합보기 */
+.tbl_card_list.type_04 .tit span {
+    margin-left: 5px;
+    font-size: 13px;
+    font-weight: 400;
+}
+.tbl_card_list.type_04 .info span {
+    position: relative;
+    font-size: 14px;
+    font-weight: 400;
+    color: #666;
+    max-width: 100%;
+    display: inline-block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.tbl_card_list.type_04 .info span + span::before {
+    content: "|";
+    margin: 0 5px 0 3px;
+}
+.tbl_card_list.type_04 .hashtag span {
+    margin-left: 5px;
+    font-size: 14px;
+    font-weight: 400;
+    color: #666;
 }
 
 /* 체크박스 리스트타입 :: 투자자 검색 - 이미지 */
@@ -4225,7 +4254,12 @@ a.ui-button:active,
         padding: 15px;
     }
     .tbl_card_list.type_04 .tit {
+        flex-direction: column;
+        align-items: flex-start;
         font-size: 17px;
+    }
+    .tbl_card_list.type_04 .tit span {
+        margin-left: 0;
     }
     
     /* 테이블 타입 :: 메인 */
