--- a/portal/css/common.css
+++ b/portal/css/common.css
@@ -1949,6 +1949,30 @@
     bottom: inherit;
     right: inherit;
 }
+.tbl_longcard.type_03 > ul > li .info ul {
+    width: 100%;
+    justify-content: flex-start;
+    gap: 20px;
+    margin-top: 10px;
+}
+.tbl_longcard.type_03 > ul > li .info ul li::after {
+    content: ">";
+    position: absolute;
+    top: 50%;
+    right: -15px;
+    transform: translateY(-50%);
+}
+.tbl_longcard.type_03 > ul > li .info ul li:last-child::after {
+    display: none;
+}
+.tbl_longcard.type_03 > ul > li .info .btn_box {
+    justify-content: flex-end;
+    width: 100%;
+}
+.tbl_longcard.type_03 > ul > li .info .btn_box * {
+    flex: none;
+    width: auto;
+}
 
 .tbl_longcard.type_04 > ul > li {
     padding: 25px;
