엔젤투자 AtoZ 링크에  파일 다운로드 추가

--- a/portal/css/main.css
+++ b/portal/css/main.css
@@ -496,6 +496,7 @@ header.headerfix .header_top {
     justify-content: space-between;
     gap: 40px;
     margin-top: 40px;
+    width: 100%;
 }
 .sec2 .search_word dl {
     width: calc(50% - 20px);
