--- a/portal/css/common.css
+++ b/portal/css/common.css
@@ -500,6 +500,7 @@
     position: relative;
     padding-left: 20px;
     box-sizing: border-box;
+    text-align: left;
     font-size: 17px;
     font-weight: 400;
 }
