--- a/portal/css/style.css
+++ b/portal/css/style.css
@@ -1513,6 +1513,17 @@ a.ico_folder::after {
     font-weight: 400;
     color: #fff;
 }
+.atoz_img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    overflow: auto;
+    margin-bottom: 45px;
+    background-color: #f5f5f5;
+    border-radius: 10px;
+    padding: 40px 0;
+}
 .atoz_box .img {
     width: calc(43% - 50px);
     max-width: 433px;
@@ -1520,11 +1531,6 @@ a.ico_folder::after {
     margin-right: 5%;
     background: url(../images/content/img_atoz.png) no-repeat center;
     background-size: 100% auto;
-}
-.atoz_img {
-    width: 100%;
-    overflow: auto;
-    margin-bottom: 45px;
 }
 
 /* 벤처투자상담 */
@@ -6376,6 +6382,11 @@ footer .footer_bottom {
         width: calc(100% - 30px);
         height: 195px;
         margin: 10px 0 20px;
+    }
+    .atoz_img {
+        justify-content: flex-start;
+        padding: 15px;
+        box-sizing: border-box;
     }
 
     /* 용어사전 */
