--- a/portal/css/style.css
+++ b/portal/css/style.css
@@ -1522,7 +1522,7 @@ a.ico_folder::after {
     margin-bottom: 45px;
     background-color: #f5f5f5;
     border-radius: 10px;
-    padding: 40px 0;
+    padding: 40px 20px;
 }
 .atoz_box .img {
     width: calc(43% - 50px);
