--- a/portal/css/style.css
+++ b/portal/css/style.css
@@ -53,6 +53,7 @@ header .header_top nav {
 header .header_top nav > ul {
     display: flex;
     height: 100%;
+    gap: 90px;
 }
 header .header_top nav > ul > li {
     display: flex;
@@ -60,7 +61,6 @@ header .header_top nav > ul > li {
     align-items: center;
     justify-content: center;
     height: 100%;
-    width: 185px;
 }
 header .header_top nav > ul > li > a {
     display: flex;
@@ -110,14 +110,14 @@ header .header_top nav > ul > li > ul {
     position: absolute;
     top: 95px;
     left: 50%;
-    width: 100%;
+    width: 150%;
     height: 0;
     overflow: hidden;
-    transform: translateX(-50%);
+    transform: translateX(-41%);
     opacity: 0;
     transition: .5s;
 }
-header .header_top nav > ul > li > ul::after {
+/* header .header_top nav > ul > li > ul::after {
     content: "";
     display: block;
     position: absolute;
@@ -126,7 +126,7 @@ header .header_top nav > ul > li > ul::after {
     width: 1px;
     height: 100%;
     background-color: #f5f5f5;
-}
+} */
 header .header_top nav > ul > li:last-child > ul::after {
     display: none;
 }
@@ -134,18 +134,30 @@ header .header_top nav > ul > li:last-child > ul::after {
     height: auto;
     opacity: 1;
 }
-header .header_top nav > ul > li > ul li {
-    text-align: center;
-}
 header .header_top nav > ul > li > ul > li > a {
     display: inline-block;
-    padding: 5px 10px;
+    position: relative;
+    padding: 5px 10px 5px 20px;
     font-weight: 500;
     transition: .2s;
+}
+header .header_top nav > ul > li > ul > li > a::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 12px;
+    left: 8px;
+    width: 3px;
+    height: 3px;
+    background-color: #333;
+    border-radius: 50%;
 }
 header .header_top nav > ul > li > ul > li:hover > a {
     background-color: #609de9;
     color: #fff;
+}
+header .header_top nav > ul > li > ul > li:hover > a::after {
+    background-color: #fff;
 }
 header .header_top .util_box {
     display: flex;
@@ -164,6 +176,9 @@ header .header_top nav ul ul ul {
     flex-direction: column;
     padding: 10px 0;
     gap: 5px;
+}
+header .header_top nav ul ul ul li {
+    padding-left: 20px;
 }
 header .header_top nav ul ul ul li a {
     font-weight: 400;
@@ -5678,9 +5693,12 @@ footer .footer_bottom {
     header .header_top {
         padding: 0 20px;
     }
-    header .header_top nav > ul > li {
-        width: 160px;
+    header .header_top nav > ul {
+        gap: 33px;
     }
+    /* header .header_top nav > ul > li {
+        width: 160px;
+    } */
     header .header_top nav > ul > li > a {
         font-size: 18px;
     }
