메인 수정 및 헤더수정

--- a/portal/css/main.css
+++ b/portal/css/main.css
@@ -275,7 +275,7 @@ header.headerfix .header_top {
 .swiper-container .slide_wrap .inner .total li .total_content strong {
     font-size: 22px;
     font-weight: 800;
-    color: #ff5a39;
+    color: #af341c;
 }
 .swiper-container .slide_wrap .inner .total li .total_content span {
     font-size: 22px;
