--- a/portal/css/style.css
+++ b/portal/css/style.css
@@ -1609,18 +1609,18 @@ a.ico_folder::after {
 }
 
 /* 교육 */
-.edu_box .bg_box {
+.edu_box .back_box {
     padding: 25px 35px;
     box-sizing: border-box;
     border-radius: 10px;
     border: 1px solid #d9e1e7;
     background-color: #f6f7f9;
 }
-.edu_box .search_item:nth-child(1) .bg_box {
+.edu_box .search_item:nth-child(1) .back_box {
     display: flex;
     gap: 20px;
 }
-.edu_box .bg_box .left {
+.edu_box .back_box .left {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1629,18 +1629,18 @@ a.ico_folder::after {
     height: 162px;
     border-radius: 10px;
 }
-.edu_box .bg_box .right {
+.edu_box .back_box .right {
     display: flex;
     align-items: center;
     width: calc(100% - 295px);
     line-height: 30px;
 }
-.edu_box .bg_box .right p {
+.edu_box .back_box .right p {
     word-break: keep-all;
     font-size: 17px;
     font-weight: 400;
 }
-.edu_box .search_item:nth-child(2) p {
+.edu_box .edu_venture .search_item:nth-child(2) p {
     padding-left: 25px;
     box-sizing: border-box;
     margin-bottom: 20px;
@@ -1648,43 +1648,43 @@ a.ico_folder::after {
     font-size: 17px;
     font-weight: 400;
 }
-.edu_box .search_item .check_box {
+.edu_box .edu_venture .search_item .check_box {
     background: url(../images/content/bg_check.png);
 }
-.edu_box .search_item .check_box.brown {
+.edu_box .edu_venture .search_item .check_box.brown {
     background-color: #a47260;
     border: 3px solid #f8e3db;
 }
-.edu_box .search_item .check_box.orange {
+.edu_box .edu_venture .search_item .check_box.orange {
     background-color: #fb832b;
     border: 3px solid #ffbb88;
 }
-.edu_box .search_item .check_box.blue {
+.edu_box .edu_venture .search_item .check_box.blue {
     background-color: #105ab5;
     border: 3px solid #c7defb;
 }
-.edu_box .search_item .check_box.green {
+.edu_box .edu_venture .search_item .check_box.green {
     background-color: #50a42e;
     border: 3px solid #d6ffc5;
 }
 .edu_box .search_item:nth-child(2) {
     padding-top: 45px;
 }
-.edu_box .search_item:nth-child(2) .bg_box dl + dl {
+.edu_box .edu_venture .search_item:nth-child(2) .bg_box dl + dl {
     margin-top: 20px;
 }
-.edu_box .search_item:nth-child(2) .bg_box dt {
+.edu_box .edu_venture .search_item:nth-child(2) .bg_box dt {
     padding: 15px 0 30px;
     box-sizing: border-box;
     text-align: center;
     font-size: 22px;
     font-weight: 600;
 }
-.edu_box .search_item:nth-child(2) .bg_box dl:nth-child(1) dd {
+.edu_box .edu_venture .search_item:nth-child(2) .bg_box dl:nth-child(1) dd {
     display: flex;
     justify-content: center;
 }
-.edu_box .search_item:nth-child(2) .bg_box dl:nth-child(1) dd .check_box {
+.edu_box .edu_venture .search_item:nth-child(2) .bg_box dl:nth-child(1) dd .check_box {
     width: auto;
     border-radius: 10px;
     padding: 15px 30px;
@@ -1692,13 +1692,13 @@ a.ico_folder::after {
     font-size: 19px;
     font-weight: 600;
 }
-.edu_box .search_item:nth-child(2) .bg_box dl:nth-child(2) dd {
+.edu_box .edu_venture .search_item:nth-child(2) .bg_box dl:nth-child(2) dd {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 100px;
 }
-.edu_box .search_item:nth-child(2) .bg_box dl:nth-child(2) dd .check_box {
+.edu_box .edu_venture .search_item:nth-child(2) .bg_box dl:nth-child(2) dd .check_box {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1712,7 +1712,7 @@ a.ico_folder::after {
     font-size: 21px;
     font-weight: 400;
 }
-.edu_box .search_item:nth-child(2) .bg_box dl:nth-child(2) dd .check_box::after {
+.edu_box .edu_venture .search_item:nth-child(2) .bg_box dl:nth-child(2) dd .check_box::after {
     content: "";
     display: block;
     position: absolute;
@@ -1722,23 +1722,71 @@ a.ico_folder::after {
     height: 1px;
     background-color: #d9e0e6;
 }
-.edu_box .search_item:nth-child(2) .bg_box dl:nth-child(2) dd .check_box:last-child::after {
+.edu_box .edu_venture .search_item:nth-child(2) .bg_box dl:nth-child(2) dd .check_box:last-child::after {
     display: none;
 }
-.edu_box .search_item:nth-child(2) .img {
+.edu_box .edu_venture .search_item:nth-child(2) .img {
     display: flex;
     justify-content: center;
     margin-top: 30px;
 }
 
-.edu_box .search_item:nth-child(3) .content_list_box .list_item .btn_box {
+.edu_box .edu_venture .search_item:nth-child(3) .content_list_box .list_item .btn_box {
     margin: 0;
     justify-content: flex-start;
 }
-.edu_box .search_item:nth-child(3) .content_list_box .list_item .btn_box * {
+.edu_box .edu_venture .search_item:nth-child(3) .content_list_box .list_item .btn_box * {
     width: auto;
     flex: none;
     padding: 10px 20px;
+}
+.edu_box .list_center {
+    margin-top: 30px;
+}
+.edu_box .list_center dt {
+    text-align: center;
+}
+
+.edu_box .edu_angel .content_list_box ul > li::before {
+    top: 10px;
+}
+.edu_box .edu_item + .edu_item {
+    margin-top: 40px;
+}
+.edu_box .edu_item h5 {
+    margin-bottom: 15px;
+    font-size: 20px;
+    font-weight: 600;
+}
+.edu_item .tbl_box_data table tr th {
+    font-weight: 600;
+}
+.edu_item .tbl_box_data table tr td {
+    font-size: 17px;
+    font-weight: 400;
+    background-color: #fff;
+}
+.edu_item .content_list_box ul,
+.edu_item .content_list_box dl {
+    padding-left: 0;
+}
+.edu_box .edu_item .content_list_box ul > li::before {
+    top: 5px;
+}
+.edu_item .content_list_box dl dt {
+    font-weight: 500;
+}
+.edu_item .img {
+    overflow: auto;
+    padding: 20px;
+    box-sizing: border-box;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    margin: 35px 0 0;
+}
+.edu_item .img img {
+    width: 100%;
+    min-width: 600px;
 }
 
 /* 뉴스레터 웹진 */
@@ -6443,50 +6491,63 @@ footer .footer_bottom {
     }
 
     /* 교육 */
-    .edu_box .bg_box {
+    .edu_box .back_box {
         padding: 15px;
     }
-    .edu_box .search_item:nth-child(1) .bg_box {
+    .edu_box .search_item:nth-child(1) .back_box {
         flex-direction: column;
     }
-    .edu_box .bg_box .left {
+    .edu_box .back_box .left {
         width: 100%;
     }
-    .edu_box .bg_box .right {
+    .edu_box .back_box .right {
         width: 100%;
     }
-    .edu_box .bg_box .right p {
+    .edu_box .back_box .right p {
         font-size: 15px;
         line-height: 23px;
     }
-    .edu_box .search_item:nth-child(2) p {
+    .edu_box .edu_venture .search_item:nth-child(2) p {
         padding-left: 0;
         font-size: 15px;
     }
-    .edu_box .search_item:nth-child(2) .img {
+    .edu_box .edu_venture .search_item:nth-child(2) .img {
         overflow-x: auto;
         justify-content: flex-start;
     }
-    .edu_box .search_item:nth-child(2) .bg_box dl:nth-child(1) dd .check_box {
+    .edu_box .edu_venture .search_item:nth-child(2) .bg_box dl:nth-child(1) dd .check_box {
         padding: 15px;
         word-break: keep-all;
         text-align: center;
         font-size: 16px;
     }
-    .edu_box .search_item:nth-child(2) .bg_box dl:nth-child(2) dd {
+    .edu_box .edu_venture .search_item:nth-child(2) .bg_box dl:nth-child(2) dd {
         gap: 15px;
     }
-    .edu_box .search_item:nth-child(2) .bg_box dl:nth-child(2) dd .check_box {
+    .edu_box .edu_venture .search_item:nth-child(2) .bg_box dl:nth-child(2) dd .check_box {
         width: 135px;
         height: 135px;
         font-size: 16px;
     }
-    .edu_box .search_item:nth-child(2) .bg_box dl:nth-child(2) dd .check_box::after {
+    .edu_box .edu_venture .search_item:nth-child(2) .bg_box dl:nth-child(2) dd .check_box::after {
         display: none;
     }
 
-    .edu_box .search_item:nth-child(3) .content_list_box .list_item .btn_box * {
+    .edu_box .edu_venture .search_item:nth-child(3) .content_list_box .list_item .btn_box * {
         font-size: 14px;
+    }
+    .edu_box .edu_angel .content_list_box ul {
+        padding-left: 0;
+        gap: 5px;
+    }
+    .edu_box .edu_angel .content_list_box ul li {
+        font-size: 15px;
+    }
+    .edu_box .edu_item h5 {
+        font-size: 15px;
+    }
+    .edu_box .btn_box_group.center .btn_box {
+        width: 100%;
     }
 
     /* 뉴스레터 웹진 */
