--- a/portal/css/main.css
+++ b/portal/css/main.css
@@ -465,7 +465,7 @@ header.headerfix .header_top {
     padding: 0 120px 40px;
     box-sizing: border-box;
 }
-.sec2 h2 {
+.sec2 h2 a {
     margin-bottom: 15px;
     font-size: 60px;
     font-weight: 700;
@@ -787,6 +787,10 @@ header.headerfix .header_top {
     display: flex;
     gap: 50px;
     width: 100%;
+}
+.sec3 .main_statistics_box > a {
+    position: absolute;
+    color: #2b3b76;
 }
 .sec3 .main_statistics_box dl {
     flex: 1;
@@ -1701,7 +1705,7 @@ header.headerfix .header_top {
     .sec2 .inner {
         padding-bottom: 120px;
     }
-    .sec2 h2 {
+    .sec2 h2 a {
         font-size: 30px;
     }
     .sec2 .search_box .inp_group {
