--- a/portal/css/style.css
+++ b/portal/css/style.css
@@ -6069,7 +6069,7 @@ footer .footer_bottom {
         display: flex;
         width: 132px;
         height: 22px;
-        background: url(../images/logo.png) no-repeat center;
+        background: url(../images/logo/logo_w_w.svg) no-repeat center;
         background-size: 100% auto;
     }
     .allmenu_box .allmenu_box_header .allmenu_util {
